--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
 .vscode
-<<<<<<< HEAD
-build/
-=======
-Ref/
-build/
->>>>>>> c80bbbacc5d29925e179e37b46a5590bc59ffbfb
+Programming/out
+Programming/.idea
