Add full report for week 2

--- a/Programming/src/.classpath
+++ b/Programming/src/.classpath
@@ -47,5 +47,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/MinhChau/.eclipse/org.json/json-20210307.jar"/>
+	<classpathentry kind="lib" path="E:/BKHN/Chous_Projects/networkprogramming_20202/project/Programming/lib/sqlite-jdbc-3.7.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
